--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,3 @@
 {
-  "builds": [
-    {
-      "src": "sioms_frontend/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/sioms_frontend/dist/$1"
-    }
-  ]
+  "rootDirectory": "sioms_frontend"
 }
