Add API base config + Vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,4 @@
 {
-  "builds": [
-    {
-      "src": "sioms_frontend/package.json",
-      "use": "@vercel/static-build"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "sioms_frontend/dist/$1"
-    }
-  ]
+  "builds": [{ "src": "sioms_frontend/package.json", "use": "@vercel/static-build" }],
+  "routes": [{ "src": "/(.*)", "dest": "/sioms_frontend/dist/index.html" }]
 }
