--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,8 @@ djangorestframework_simplejwt==5.5.1
 PyJWT==2.10.1
 sqlparse==0.5.3
 
-gunicorn
-whitenoise
+dj-database-url==2.2.0
+psycopg2-binary==2.9.9
+
+gunicorn==21.2.0
+whitenoise==6.6.0
